# planegeometry

./: .gitignore  CHANGELOG  LICENSE  README.md  setup.cfg
doc/: circle.txt  closest.txt  convex_hull.txt  delaunay.txt  depend.txt  graph.txt  intersections.txt  monotone.txt  planarmap.txt  point.txt  polygon.txt  quadtree.txt  quickstart.txt  rectangle.txt  segment.txt  triangle.txt  trianglecollection.txt  triangulation.txt
planegeometry/algorithms/: bentleyottmann1.py  bentleyottmann2.py  closestpair1.py  closestpair3.py  closestpair4.py  geomtools.py  horizontalvertical.py  shamoshoey1.py  shamoshoey2.py
planegeometry/algorithms/tests/: hv_segments.py  hv_segments2.py  test_bentleyottmann1.py  test_bentleyottmann2.py  test_closestpair1.py  test_closestpair3.py  test_closestpair4.py  test_geomtools.py  test_horizontalvertical.py  test_shamoshoey1.py  test_shamoshoey2.py  timeit_closestpair.py  timeit_furthestpoints.py  timeit_intersections.py  unit_segments.py  unit_segments2.py
planegeometry/hulls/: graham.py  jarvis.py  quickhull.py
planegeometry/hulls/tests/: test_graham.py  test_jarvis.py  test_quickhull.py  timeit_hull1.py  (+2 more)
planegeometry/structures/: avltree1.py  avltree2.py  circles.py  edges.py  edges2.py  events.py  graphs.py  planarmaps.py  points.py  points2.py  polygons.py  pqueues.py  quadtree.py  rectangles.py  rectangles2.py  segments.py  segments2.py  slowtrees.py  trianglecollections.py  triangles.py  triangles2.py
planegeometry/triangulations/: bowyerwatson.py  fanpm.py  fantc.py  flipping.py  naive.py  ymonotonepm.py  ymonotonetc.py
(+66 files in other folders)
