[metadata]
name = planegeometry
version = 1.0.0
author = Andrzej Kapanowski
author_email = andrzej.kapanowski@uj.edu.pl
description = Python implementation of algorithms and data structures from plane geometry
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ufkapano/planegeometry
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Education
    Topic :: Scientific/Engineering

[options]
packages = find:
python_requires = >=3.7
install_requires = matplotlib
